# VectorSkinning

./: .gitattributes  .gitignore  INSTALL  README.md  TODO.txt  bbw.cpp  bbw.py  bezier_chain_constraints.py  bezier_constraint_even_solver.py  bezier_constraint_odd_solver.py  bezier_constraint_odd_solver_fast.py  bezier_utility.py  chain_computer.py  chain_computer_tests.py  engine.py  generate_chain_system.py  generate_chain_system_config.py  init_window.py  integration_accuracy 10.csv  integration_accuracy 8.csv  myarray.py  parameters.py  profile.HOW  profile.out  pychecker.HOW  solutions-arcFalse-C1.pickle  solutions-arcFalse-G1.pickle  solutions-arcFalse.pickle  solutions-arcTrue-C1.pickle  solutions-arcTrue-G1.pickle  solutions-arcTrue.pickle  sparse_solver_speed_test.py  sparse_solver_speed_test.py-results.txt  sparse_solver_speed_test.py.HOW  sparse_solver_speed_test.py.HOW.out  sparse_solver_speed_test.py.HOW.out-clean.txt  spline_computer.py  svg_parser.py  systems_and_solvers.py  tictoc.py  (+6 more)
FitCurves/: FitCurves.py
OpenSubdiv_wrapper/: subdivision  subdivision_engine.cpp  subdivision_engine.h  subdivision_matrices  subdivision_matrices.cpp  subdivision_matrices.h  subdivision_matrices_eigen.cpp  subdivision_matrices_eigen.h  tcc1.out  tcc2.out  tcc5.out  test.HOW  tns1.out
bbw_wrapper/: bbw.cpp  bbw.dylib  bbw.py  harmonic.cpp
ccsub_wrapper/: ccsub.py
cplusplus_src/: .gitignore  Eigen_test.cpp  spline_system_maker.cpp
cplusplus_src/Stam/: .gitignore  CMakeLists.txt  Makefile  SubMatrix.cpp  a.out  catmull-clark.cpp  definition.h  eigenspace.h
cplusplus_src/Stam/ext/: libigl
cplusplus_src/Stam/src/: .gitignore  Model.cpp  Model.h  SubMatrix.cpp  SubMatrix.h  catmull-clark.cpp  catmull-standalone.c  catmull.c  catmull.h  catmull_eigen.cpp  catmull_eigen.h  catmull_obj.cpp  catmull_obj.h  main.cpp  stam_eigen_reader.c  stam_eigen_reader.h
cplusplus_src/Stam/src/data/: cctest_modern.c
raytri/: edge_distances.py  libraytri.dylib  raytri.py
src/: myarray.py  (+7 more)
(+229 files in other folders)
